--- a/static/ModifyRules.html
+++ b/static/ModifyRules.html
@@ -4,9 +4,9 @@
     <title>下载链接管理</title>
 </head>
 
-<link rel="stylesheet" href="/static/jquery-ui.min.css">
-<script src="/static/jquery-1.11.0.min.js"></script>
-<script src="/static/jquery-ui.min.js"></script>
+<link rel="stylesheet" href="/static/assets/js/jquery-ui.min.css">
+<script src="/static/assets/js/jquery-1.11.0.min.js"></script>
+<script src="/static/assets/js/jquery-ui.min.js"></script>
 <script type="text/javascript">
 
     $(document).ready(function() {
