--- a/static/Index.html
+++ b/static/Index.html
@@ -1,76 +1,110 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>${SiteName}</title>
-    </head>
-  
-    <style type="text/css">
-        * {
-            /*border: 1px dashed;*/
-        }
-        .msg {
-            font-size: 1.2em;
-            display: block;
-            margin: auto;
-            padding: auto;
-            text-align: center;
-        }
-        .button {
-            height: 80px;
-            width: 300px;
-            font-size: 3em;
-            border-color: #6495ED;
-            background-color: #BCD2EE;
-            border-radius: 20px;
-            margin: auto;
-            margin-top: .5em;
-            padding: auto;
-            text-align: center;
+<head>
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta name="viewport" content="width=device-width">
+
+    <title>${SiteName}</title>
+
+    <meta name="robots" content="noindex, nofollow">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="static/assets/css/bootmetro.css">
+    <link rel="stylesheet" type="text/css" href="static/assets/css/bootmetro-responsive.css">
+    <link rel="stylesheet" type="text/css" href="static/assets/css/bootmetro-icons.css">
+    <link rel="stylesheet" type="text/css" href="static/assets/css/bootmetro-ui-light.css">
+    <link rel="stylesheet" type="text/css" href="static/assets/css/datepicker.css">
+    <link rel="shortcut icon" href="static/assets/ico/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144"
+          href="static/assets/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114"
+          href="static/assets/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="static/assets/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="static/assets/ico/apple-touch-icon-57-precomposed.png">
+    <script src="static/assets/js/modernizr-2.6.2.min.js"></script>
+    <style>
+        html,
+        body {
+            position: relative;
+            background-color: #f2f0e4;
+            background: transparent url(static/assets/img/bkg-win8.jpg) repeat 0 0;
+            color: white;
         }
     </style>
-
-    <body>
+</head>
+<body>
+<div class="container">
 %if UserStatus == 0 or UserStatus == 1:
-        <div class="msg">
-            <p style="color:green"><a href="/settings">${UserName}</a>，欢迎回来～(<a href="/logout">注销</a>)</p>
-        </div>
+    <div class="page-header">
+        <h1>
+            <div>
+                <span class="icon icon-user"></span>
+                <a href="/settings" style="color:white;">${UserName}</a>
+                <small>，欢迎回来~</small>
+            </div>
+        </h1>
+    </div>
 %elif UserStatus == 2:
-        <div class="msg">
-            <p style="color:red"><a href="/settings">${UserName}</a>，您的账户已经被封禁，请联系管理员进行处理！</p>
-        </div>
+    <div class="alert alert-error">
+        <a href="/settings">${UserName}</a>，您的账户已经被封禁，请联系管理员进行处理！
+    </div>
 %elif UserStatus == -1:
-        <div class="msg">
-            <p style="color:darkslategray">如需借书请<a href="/cgi-bin/LibServer.py?action=LoginPage">登陆</a>您的帐号，或者点击<a href="">这里</a>进行注册。</p>
-        </div>
+    <div class="alert alert-info">
+        如需增加任务请<a href="/login">登陆</a>您的帐号，或者点击<a href="/register">这里</a>进行注册。
+    </div>
 %endif
 
-
+    <div class="metro">
 %if UserStatus == 0 or UserStatus == 1:
-
-        <div class="button">
-            <a href="/modify_tasks">查看任务</a>
-        </div>
-
-        <div class="button">
-            <a href="/modify_rules">管理规则</a>
-        </div>
+        <a class="tile wide text" href="/modify_tasks">
+            <div class="text-header">查看任务</div>
+        </a>
+        <a class="tile wide text bg-color-purple" href="/modify_rules">
+            <div class="text-header">管理规则</div>
+        </a>
+        <a class="tile wide text bg-color-grayLight" href="/settings">
+            <div class="text-header">个人设置</div>
+        </a>
 
 %endif
-
+        <a class="tile wide text bg-color-orange" href="/faq">
+            <div class="text-header">常见问题</div>
+        </a>
 %if UserStatus == 0:
-
-        <div class="button">
-            <a href="/admin">系统管理</a>
-        </div>
-        <div class="button">
-            <a href="/log">系统日志</a>
-        </div>
+        <a class="tile wide text bg-color-blueDark" href="/admin">
+            <div class="text-header">系统管理</div>
+        </a>
+        <a class="tile wide text bg-color-pink" href="/log">
+            <div class="text-header">系统日志</div>
+        </a>
 %endif
+        <a class="tile wide imagetext bg-color-greenDark" href="/logout">
+            <div class="image-wrapper">
+                <span class="icon icon-logout"></span>
+            </div>
+            <div class="column-text">
+                <div class="text-header">注销登录</div>
+            </div>
+        </a>
+    </div>
+</div>
 
-        <div class="button">
-            <a href="/faq.html">常见问题</a>
-        </div>
 
-    </body>
+<!-- Grab Google CDN's jQuery. fall back to local if necessary -->
+<script src="static/assets/js/jquery-1.11.0.min.js"></script>
+<script>window.jQuery || document.write(String.fromCharCode(60) + "script src='static/assets/js/jquery-1.11.0.min.js'>\x3C/script>")</script>
+<!--[if IE 7]>
+<script type="text/javascript" src="scripts/bootmetro-icons-ie7.js"></script>
+<![endif]-->
+
+<script type="text/javascript" src="static/assets/js/google-code-prettify/prettify.js"></script>
+<script type="text/javascript" src="static/assets/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="static/assets/js/bootmetro-panorama.js"></script>
+<script type="text/javascript" src="static/assets/js/bootmetro-pivot.js"></script>
+<script type="text/javascript" src="static/assets/js/bootmetro-charms.js"></script>
+<script type="text/javascript" src="static/assets/js/bootstrap-datepicker.js"></script>
+<script type="text/javascript" src="static/assets/js/holder.js"></script>
+<script type="text/javascript" src="static/assets/js/Chart.min.js"></script>
+
+</body>
 </html>
