--- a/static/ModifyTasks.html
+++ b/static/ModifyTasks.html
@@ -32,6 +32,7 @@
             </div>
         </div>
     </div>
+    <nobr>
     <table class="table table-bordered">
         <thead>
         <tr>
@@ -64,6 +65,7 @@
 %endfor
         </tbody>
     </table>
+    </nobr>
 </div>
 
 <%include file="Footer.html"/>
